--- a/EDA/bcEDA.Rmd
+++ b/EDA/bcEDA.Rmd
@@ -1,8 +1,6 @@
 ---
 title: "R Notebook"
-output:
-  html_document:
-    df_print: paged
+output: github_document
 ---
 
 ## Breast Cancer Diagnosis
